objects/ASI_TnE_KR_ProxyDrivingTransaction__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TnE_KR_MDM_Employee_Name__c</fullName>
        <formula>ASI_TnE_KR_MDM_Employee_No__r.ASI_eForm_Employee_First_Name__c&amp;&quot; &quot;&amp;ASI_TnE_KR_MDM_Employee_No__r.ASI_eForm_Employee_Last_Name__c</formula>
        <label>Employee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_MDM_Employee_No__c</fullName>
        <label>Employee No.</label>
        <referenceTo>ASI_eForm_HR_MDM__c</referenceTo>
        <relationshipLabel>Proxy Driving Transactions</relationshipLabel>
        <relationshipName>Proxy_Driving_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Promotion__c</fullName>
        <label>Promotion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Sub_Brand_Code__c</fullName>
        <formula>ASI_TnE_KR_Sub_brand__r.ASI_KOR_Sub_Brand_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Sub_brand_BU_code__c</fullName>
        <formula>ASI_TnE_KR_Sub_brand__r.ASI_KOR_Manufacturer__c&amp;&quot;1P&quot;&amp;ASI_TnE_KR_Sub_Brand_Code__c&amp;&quot;01&quot;</formula>
        <label>Sub-brand BU code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_KOR_Sub_Brand__c</referenceTo>
        <relationshipLabel>Proxy Driving Transactions</relationshipLabel>
        <relationshipName>Proxy_Driving_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Subledger__c</fullName>
        <label>Subledger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Proxy Driving Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_KR_MDM_Employee_No__c</columns>
        <columns>ASI_TnE_KR_MDM_Employee_Name__c</columns>
        <columns>ASI_TnE_KR_Promotion__c</columns>
        <columns>ASI_TnE_KR_Sub_brand__c</columns>
        <columns>ASI_TnE_KR_Sub_Brand_Code__c</columns>
        <columns>ASI_TnE_KR_Sub_brand_BU_code__c</columns>
        <columns>ASI_TnE_KR_Subledger__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PDT-{YY}-{0000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proxy Driving Transactions</pluralLabel>
    <recordTypes>
        <fullName>ASI_TnE_KR_PD_Transaction</fullName>
        <active>true</active>
        <label>ASI TnE KR PD Transaction</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>